# Detection-and-Classification-of-Denial-of-Service-Attacks

./: README.md  predict.py  requirements.txt
artifacts/: predictions_rf.csv  wsnds_dt_gini0.01.joblib  wsnds_rf_gini0.01.joblib
data/: WSN-DS.csv
wsnds_capstone_pro/: .gitignore  README.md  main.py  setup.cfg
wsnds_capstone_pro/src/: train_wsn_ds.py  utils.py
