[metadata]
name = wsnds-capstone
version = 0.1.0
description = WSN-DS DoS Detection Capstone (Lightweight ML Approach)
author = Sai Ganesh
license = MIT

[options]
packages = find:
install_requires =
    pandas>=2.0
    numpy>=1.24
    scikit-learn>=1.3
    imbalanced-learn>=0.11
    matplotlib>=3.7
    xgboost>=1.7
    joblib>=1.3
    liac-arff>=2.5.0
python_requires = >=3.9